Fixed routmodals on mobile

--- a/src/Pages/GlobalComponents/RouteModals/RouteModals.module.css
+++ b/src/Pages/GlobalComponents/RouteModals/RouteModals.module.css
@@ -13,6 +13,7 @@
   padding-right: 20px;
   border-start-end-radius: 5px;
   border-end-end-radius: 20px;
+  z-index: 25;
 }
 
 .leftToLive > button {
@@ -43,6 +44,7 @@
   padding-left: 20px;
   border-start-start-radius: 5px;
   border-end-start-radius: 20px;
+  z-index: 25;
 }
 
 .rightToRepo > button {
